--- a/intex.html
+++ b/intex.html
@@ -1,1 +1,6 @@
-<html><head><title>New</title></head></html>
+<html><head><title>New</title></head>
+<body> this is my first edit</body>
+
+
+
+</html>
